--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab, at cum delectus dignissimos dolor dolorem doloremque dolorum et expedita facere hic iusto modi odio, officiis provident quis reiciendis sequi.</p>
+<app-menu></app-menu>
