--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  height: 100%;
+  background: #F7F7F7;
+}
+
+body {
+  margin: 0;
+}
